--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:parcial1srv.database.windows.net,1433;Initial Catalog=db-2024112099;Persist Security Info=False;User ID=admin1;Password=Admi.123;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-  },
+    "DefaultConnection": "Server=tcp:diego2024114415-srv.database.windows.net,1433;Initial Catalog=Primerparcial-db;Persist Security Info=False;User ID=diego;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
